# KXKM_Batterie_Parallelator

./: .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  KXKM_Batterie_Parallelator.code-workspace  README  README.md  adresse TCA_INA.xlsx  connecteur IDC.xlsx  partitions_16MB.csv  platformio.ini
.claude/: settings.json
.github/agents/: battery-protection-review.agent.md  bmu-safety-review.agent.md  display-safety-review.agent.md  qa-gate.agent.md
.github/hooks/: workflow-guard.json  workflow-guard.py
.github/instructions/: firmware-idf-display-safety.instructions.md  firmware-safety.instructions.md  (+4 more)
.remember/: remember.md
ArduinoJson/: Namespace.hpp
Battery management unit/: type shunt JLCPCB.xlsx
PCB BMU v2/: BMU v2.kicad_pcb  BMU v2.kicad_prl  BMU v2.kicad_pro  BMU v2.kicad_sch  BMU_switch_mosfet.kicad_pcb  BMU_switch_mosfet.kicad_prl  BMU_switch_mosfet.kicad_pro  BMU_switch_mosfet.step  I2C.kicad_sch  I2C_repeter.kicad_pcb  I2C_repeter.kicad_prl  I2C_repeter.kicad_sch  batteries.kicad_sch  erc_report.json  fp-info-cache
data/: index.html  script.js  style.css
docs/: ML_BATTERY_HEALTH_SPEC.md  PROJECT_CONTEXT_SNAPSHOT.md  QA_REMOTE_PROOF_LATEST.md  ml-battery-health-spec.md  qa-cicd-environnements.md
firmware/: CLAUDE.md
firmware-idf/: CLAUDE.md  CMakeLists.txt  Makefile  idf_component.yml  partitions.csv  sdkconfig 3  sdkconfig 3.old  sdkconfig 4  sdkconfig 5  sdkconfig.defaults
firmware-idf-legacy/: partitions.csv  sdkconfig.defaults
firmware-idf-legacy/components/bmu_ble/: CMakeLists.txt  bmu_ble.cpp
firmware-idf-legacy/components/bmu_ble/include/: bmu_ble.h  bmu_ble_internal.h
firmware-idf-legacy/components/bmu_display/: CMakeLists.txt  Kconfig  bmu_display.cpp  bmu_ui_alerts.cpp  bmu_ui_config.cpp  bmu_ui_debug.cpp  bmu_ui_main.cpp  bmu_ui_system.cpp
firmware-idf-legacy/components/bmu_soh/: CMakeLists.txt  Kconfig  bmu_soh.cpp  bmu_soh_stub.c  idf_component.yml
firmware-idf-legacy/components/bmu_soh/include/: bmu_soh.h
firmware-idf-v2/: sdkconfig.defaults
firmware-idf-v2/components/bmu_core_rs/: CMakeLists.txt
firmware-idf-v2/components/bmu_core_rs/include/: bmu_core.h
firmware-idf-v2/main/: CMakeLists.txt  main.cpp  task_ble.cpp  task_ble.h  task_bmu_core.cpp  task_ui.h
firmware-idf/components/bmu_display/: CMakeLists.txt  Kconfig  bmu_display.cpp  bmu_ui_alerts.cpp  bmu_ui_config.cpp  bmu_ui_debug.cpp  bmu_ui_detail.cpp  bmu_ui_main.cpp  bmu_ui_soh.cpp  bmu_ui_solar.cpp  bmu_ui_system.cpp  idf_component.yml
firmware-idf/components/bmu_display/include/: bmu_display.h  bmu_ui.h
firmware-idf/components/bmu_ui/: CMakeLists.txt
firmware-idf/components/bmu_ui/include/: bmu_ui.h  bmu_ui_internal.h
firmware-idf/components/bmu_ui/src/: tab_batt.c  tab_climate.c  tab_config.c
firmware-idf/main/: CMakeLists.txt  idf_component.yml  main.cpp  task_bmu_core.cpp  task_bmu_core.h  task_ui.cpp  task_wifi_mqtt.cpp  task_wifi_mqtt.h
firmware-idf/tests/hil/: conftest.py  hil_device.py  hil_report.py  pyproject.toml  test_tb02_i2c.py  test_tb03_mqtt.py  test_tb04_10_manual.py  test_tb13_bench_72h.py
firmware-rs/: Cargo.toml
firmware-rust/: Cargo.toml
firmware-rust/.cargo/: config.toml
firmware-rust/crates/bmu-balancer/: Cargo.toml
firmware-rust/crates/bmu-balancer/src/: lib.rs
firmware-rust/crates/bmu-core/: Cargo.toml  build.rs  cbindgen.toml
firmware-rust/crates/bmu-core/src/: core_impl.rs  ffi_types.rs  heap_caps_alloc.rs  lib.rs
firmware-rust/crates/bmu-drivers/: Cargo.toml
firmware-rust/crates/bmu-drivers/src/: aht30.rs  ina237.rs  lib.rs  tca9535.rs
firmware-rust/crates/bmu-i2c/: Cargo.toml
firmware-rust/crates/bmu-i2c/src/: lib.rs
firmware-rust/crates/bmu-protection/: Cargo.toml
firmware-rust/crates/bmu-protection/src/: checks.rs  latch.rs  lib.rs  manager.rs  state.rs
firmware-rust/crates/bmu-protection/tests/: property_tests.rs
firmware-rust/crates/bmu-rint/: Cargo.toml
firmware-rust/crates/bmu-rint/src/: lib.rs
firmware-rust/crates/bmu-test-fixtures/: Cargo.toml
firmware-rust/crates/bmu-test-fixtures/src/: lib.rs  mock_bus.rs
firmware-rust/crates/bmu-types/: Cargo.toml
firmware-rust/crates/bmu-types/src/: action.rs  command.rs  config.rs  lib.rs  snapshot.rs  state.rs  units.rs
firmware-rust/xtask/src/: main.rs
hardware/: CLAUDE.md
iosApp/: CLAUDE.md  project.yml
kxkm-api/: .env.example  CLAUDE.md  Dockerfile  docker-compose.yml  requirements.txt
kxkm-bmu-app/: CLAUDE.md  build.gradle.kts  settings.gradle.kts
models/: features.parquet  features_adapted.parquet  features_with_rul.parquet  fpnn_soh_f32.tflite  fpnn_soh_int8.tflite  phase2_metrics.json
plan/: process-cicd-environments-1.md  refactor-safety-core-web-remote-1.md
scripts/: check_memory_budget.sh  flash-box3.sh  gen_priority_matrix.py  import_logs_influx.py
services/soh-scoring/: Dockerfile  docker-compose.yml  pyproject.toml
services/soh-scoring/src/soh/: __init__.py  api.py  config.py  etl.py  export_onnx.py  features.py  gnn.py  inference.py  scheduler.py  synthetic.py  train_gnn.py  train_tsmixer.py  tsmixer.py
services/soh-scoring/tests/: conftest.py  test_api.py  test_features.py  test_gnn.py  test_inference.py  test_tsmixer.py
specs/: 00_intake.md  01_spec.md  02_arch.md  03_plan.md  04_validation.md
src/: BATTParallelator.cpp  Batt_Compute.h  Batt_Parallelator_lib.h  BatteryManager.cpp  BatteryManager.h  BatteryParallelator.cpp  BatteryParallelator.h  BatteryRouteValidation.cpp  BatteryRouteValidation.h  BatterySwitchCtrl.h  I2CMutex.h  INAHandler.h  INA_Func.h  INA_NRJ_lib.cpp  INA_NRJ_lib.h  InfluxBufferCodec.cpp  InfluxBufferCodec.h  InfluxDBHandler.cpp  InfluxDBHandler.h  KxLogger.h  MQTTHandler.cpp  SDLogger.cpp  SDLogger.h  SD_Logger.cpp  SD_Logger.h  TCAHandler.cpp  TCA_Func.h  TCA_NRJ_lib.cpp  TCA_NRJ_lib.h  TimeAndInfluxTask.cpp  WebMutationRateLimit.cpp  WebMutationRateLimit.h  WebServerFilesJs.h  WebServerHandler.cpp  WebServerHandler.h  WiFiHandler.cpp  WiFiHandler.h  compute.h  credentials.h.example  main.cpp  (+2 more)
test/: README  test_TCA_INA.cpp
test code/: scanner_I2C.cpp
(+777 files in other folders)
