[project]
name = "kxkm-soh-scoring"
version = "0.1.0"
description = "BMU SOH/RUL scoring pipeline — TSMixer + GNN on kxkm-ai"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torch-geometric>=2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "influxdb-client>=1.45.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soh"]

[project.scripts]
soh-api = "soh.api:main"
soh-scheduler = "soh.scheduler:main"
soh-train-tsmixer = "soh.train_tsmixer:main"
soh-train-gnn = "soh.train_gnn:main"
soh-export = "soh.export_onnx:main"
